--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,19 @@
 #unsplash {
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-position: center;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-  min-height: 100%;
-  overflow: hidden;
+  height: 100%;
+  margin: 0;
+  color: white;
 }
 
 #image {
